--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="deep-orange darken-4" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Ingredient Index</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">About</a></li>
       </ul>
@@ -59,6 +59,42 @@
             </div>
           </div>
       </div>
+      <div class="col s12 m3">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Pizza</span>
+          </div>
+          <div class="card-action">
+            <div class="chip">Tomato</div>
+            <div class="chip">Cheese</div>
+            <div class="chip">Bread</div>
+          </div>
+        </div>
+    </div>
+    <div class="col s12 m3">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Pizza</span>
+        </div>
+        <div class="card-action">
+          <div class="chip">Tomato</div>
+          <div class="chip">Cheese</div>
+          <div class="chip">Bread</div>
+        </div>
+      </div>
+  </div>
+  <div class="col s12 m3">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Pizza</span>
+      </div>
+      <div class="card-action">
+        <div class="chip">Tomato</div>
+        <div class="chip">Cheese</div>
+        <div class="chip">Bread</div>
+      </div>
+    </div>
+</div>
 
     </div>
     <br><br>
