--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col s12">
           <ul class="collapsible popout" data-collapsible="accordion">
             <li>
-              <div class="collapsible-header"><i class="material-icons">filter_drama</i>My Ingredients</div>
+              <div class="collapsible-header"><i class="material-icons">view_list</i>My Ingredients <span style="float: right;">&#x25BC;</span></div>
               <div class="collapsible-body"><span><div class="chips"></div></span></div>
             </li>
           </ul>
