--- a/index.html
+++ b/index.html
@@ -36,8 +36,24 @@
 
   <div class="container">
     <div class="section">
+      <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s6 offset-s2">
+              <i class="material-icons prefix">search</i>
+              <input id="icon_prefix" type="text" class="validate">
+              <label for="icon_prefix">Search Foods</label>
+            </div>
+                <div class="col s2 valign-wrapper">
+                  <div class="valign-wrapper">
+                    <button class="btn waves-effect waves-light valign-wrapper" type="submit" name="action" id="submit">Search</button>
+                  </div>
+                </div>
+            </div>
+        </form>
+      </div>
 
-      <!--   Icon Section   -->
+      <!--   My Ingredients   -->
       <div class="row">
         <div class="col s12">
           <ul class="collapsible popout" data-collapsible="accordion">
@@ -54,7 +70,7 @@
             </div>
             <div class="card-action">
               <div class="chip">Tomato</div>
-              <div class="chip">Cheese</div>
+              <div class="chip danger">Cheese</div>
               <div class="chip">Bread</div>
             </div>
           </div>
@@ -111,15 +127,15 @@
       </div>
     </div>
   </footer>
-
+</div>
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/app.js"></script>
   <script>
-  $('.chips').material_chip();
-  });</script>
+  $('.chips').material_chip();</script>
 
   </body>
 </html>
