--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <script src="js/app.js"></script>
   <script>
   $('.chips-placeholder').material_chip({
-  placeholder: 'Add An Ingredient',
+  placeholder: ' ',
   secondaryPlaceholder: 'Add An Ingredient',
   });</script>
 
