--- a/index.html
+++ b/index.html
@@ -40,19 +40,18 @@
           <div class="row">
             <div class="input-field col s6 offset-s2">
               <i class="material-icons prefix">search</i>
-              <input id="icon_prefix" type="text" class="validate">
+              <input id="icon_prefix" type="text" class="validate food-input">
               <label for="icon_prefix">Search Foods</label>
             </div>
                 <div class="col s2 valign-wrapper">
                   <div class="valign-wrapper">
-                    <button class="btn waves-effect waves-light valign-wrapper" type="submit" name="action" id="submit">Search</button>
+                    <button class="btn waves-effect waves-light valign-wrapper" name="action" id="submit">Search</button>
                   </div>
                 </div>
             </div>
         </form>
       </div>
 
-      <!--   My Ingredients   -->
       <div class="row">
         <div class="col s12">
           <ul class="collapsible popout" data-collapsible="accordion">
@@ -62,56 +61,14 @@
             </li>
           </ul>
         </div>
-        <div class="col s12 m3">
-          <div class="card">
-            <div class="card-content">
-              <span class="card-title">Pizza</span>
-            </div>
-            <div class="card-action">
-              <div class="chip">Tomato</div>
-              <div class="chip danger">Cheese</div>
-              <div class="chip">Bread</div>
-            </div>
-          </div>
-      </div>
-      <div class="col s12 m3">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">Pizza</span>
-          </div>
-          <div class="card-action">
-            <div class="chip">Tomato</div>
-            <div class="chip">Cheese</div>
-            <div class="chip">Bread</div>
-          </div>
-        </div>
-    </div>
-    <div class="col s12 m3">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title">Pizza</span>
-        </div>
-        <div class="card-action">
-          <div class="chip">Tomato</div>
-          <div class="chip">Cheese</div>
-          <div class="chip">Bread</div>
-        </div>
-      </div>
-  </div>
-  <div class="col s12 m3">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">Pizza</span>
-      </div>
-      <div class="card-action">
-        <div class="chip">Tomato</div>
-        <div class="chip">Cheese</div>
-        <div class="chip">Bread</div>
-      </div>
-    </div>
-</div>
+        <div id="food-list">
 
-    </div>
+        </div>
+
+
+
+  </div>
+
     <br><br>
 
     <div class="section">
@@ -131,7 +88,6 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
   <script src="js/app.js"></script>
   <script>
   $('.chips-placeholder').material_chip({
