added web remark script tag

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/webremarks.js"></script>
   <script>
   $('.chips-placeholder').material_chip({
   placeholder: ' ',
